@@ -5799,7 +5799,7 @@ id=7
 lv=2
 dt=Text
 nm=panel.GetPanelInfo
-mtime=3745591225
+mtime=3827227504
 <article>
 #_tPanelInfo = panel.GetPanelInfo (handle, whatpanel)
 #_
@@ -5811,7 +5811,7 @@ mtime=3745591225
 #_  tPanelInfo: table, or nil
 #_    fields of tPanelInfo:
 #_      OwnerGuid:           string
-#_      PluginHandle:        userdata, or nil
+#_      PluginHandle:        light userdata, or nil
 #_      PanelType:           integer
 #_      PanelRect:           table (fields: left, top, right, bottom)
 #_      ItemsNumber:         integer
@@ -5824,12 +5824,6 @@ mtime=3745591225
 #_      PluginObject:        non-false Lua value
 #_
 #_**Note 1:**
-#_  The *PluginHandle* field has a method:
-#_  *PluginHandle:rawhandle()*
-#_    returns the original value of handle received from Far Manager
-#_    that is suitable for using with LuaJIT FFI and as a table key.
-#_
-#_**Note 2:**
 #_  The *PluginObject* field is LuaFAR-specific. It is only present if OwnerGuid==PluginGuid,
 #_  i.e. when *panel.GetPanelInfo* was called from the same plugin that created the panel.
 #_  The intended use of this field is when a panel plugin processes macro calls for operations
