@@ -1,3 +1,9 @@
+johnd0e 10.04.2021 19:37:46 +0300 - build 762
+
+1. LuaFAR: minor fix (from shmuel):
+   panel.GetPanelInfo \ PluginHandle is light userdata now
+   and doesn't require rawhandle() method.
+
 johnd0e 15.01.2021 10:12:00 +0200 - build 761
 
 1. LuaFAR: update luautf8 library to 0.1.3-2-g5627e17.
